# dream_cartographer

./: .gitignore  LICENSE  survey_lida_slam.md  tmp_cartographer.md  visual_slam_implementation_notes.md
2dlocalizer_scripts/: 2dlocalizer.cpp  2dlocalizer.hpp  2dlocalizer.py  2dlocalizer_scratch.py  CMakeLists.txt  ThreadPool.h  a.out  bird_world.pgm  generate_benchmark_data.py  localizer_2d_utils.py  rico_bash_preferences.sh  save_scan_msg_into_pickles.py  save_scan_msg_into_pickles_and_csv.py  template_matching.cpp  template_matching_cuda.cpp
2dlocalizer_scripts/data/: bird_world.yaml  full_trip.bag  laser_scans.csv  map499.yaml  map499_poses_3.csv  map499_poses_300.csv  scan_data.pkl
exercises/: CMakeLists.txt  exercises_common.hpp  handcrafted_gauss_newton_opt.cpp  simple_g2o_example.cpp  simple_second_order_ceres.cpp
rgbd_slam_rico/: CMakeLists.txt  Dockerfile  README.md  entrypoint_rgbd_slam_docker.sh  package.xml  start_rgbd_slam_docker.sh
rgbd_slam_rico/configs/: rgbd_slam_rico_config.yaml
rgbd_slam_rico/include/rgbd_slam_rico/: constants.hpp  debug_utils.hpp  orb_feature_detection.hpp  p3p.hpp  rgbd_rico_slam_2d2d.hpp  rgbd_rico_slam_backend.hpp  rgbd_rico_slam_frontend.hpp
rgbd_slam_rico/include/rgbd_slam_rico_exercises/: README.md  orb_exercise.hpp
rgbd_slam_rico/launch/: rgbd_slam_rico.launch
rgbd_slam_rico/rviz/: rgbd_rico_slam.rviz
rgbd_slam_rico/scripts/: record_realsense_topics_in_bag.py  visualize_pointcloud_open3d.py
rgbd_slam_rico/src/: orb_test.cpp  p3p_demo.cpp  rgbd_rico_slam_mini.cpp
rgbd_slam_rico/tests/unit/: test_orb.cpp
scripts/: graph_slam_toy_implementations.ipynb  remove_objects_processing.py
